--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="social-networks">
                 <a href="https://github.com/avpankov"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/a__pankov/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/artyom-pankov-540198235"><i class="fab fa-linkedin"></i></a>
                 <a href="https://vk.com/artyom_pankov"><i class="fab fa-vk"></i></a>
                 <a href="https://join.skype.com/invite/ASOKG6WX0cN4"><i class="fab fa-skype"></i></a>
             </div>
@@ -50,7 +50,7 @@
             <div class="greeting">
                 <h4>Hello!</h4>
                 <h1><span>I'm</span> Artyom Pankov</h1>
-                <hr style="width: 85%;">
+                <hr>
             </div>
             <p>Due to my work history i gained experience in organization of various events and working with people. But
                 once i felt craving for some other sphere where i could make things i can be proud of.
@@ -58,7 +58,7 @@
             <p>I started to attend courses of graphic design, and as a result discovered for myself front-end
                 development.</p>
 
-            <p>After some time of self-learning HTML, CSS i started cources up skill lab, learn.javascript.ru.
+            <p>After some time of self-learning HTML, CSS and JS i enrolled in EPAM Front-End Development training.
                 And must say i feel this is the sphere i'm interested in, i'm ready to discover it more and more.
             </p>
             <p>My goal right now is to obtain enough practical skills to get a job offer. Ability to learn fast and
