--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <link rel="stylesheet" href="./styles/style1/style.css">
+    <link rel="stylesheet" href="./styles/style2/style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif&family=Roboto:wght@300;700&display=swap"
@@ -66,7 +66,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index2.html">Markup using floats</a>
+        <a href="./index.html">Markup using flexbox</a>
     </footer>
     <script src="script.js"></script>
 </body>
