--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index2.html">Markup using floats</a>
+        <a href="./index2.html">Layout using floats</a>
     </footer>
     <script src="script.js"></script>
 </body>
