--- a/index2.html
+++ b/index2.html
@@ -66,7 +66,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">Markup using flexbox</a>
+        <a href="./index.html">Layout using flexbox</a>
     </footer>
     <script src="script.js"></script>
 </body>
