--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
             <img src="./img/photo.jpg" alt="photo">
             <div class="info">
                 <div class="info__headings">
-                    <h4>age</h4>
-                    <h4>location</h4>
-                    <h4>e-mail</h4>
-                    <h4>phone</h4>
-                    <h4>education</h4>
-                </div>
-                <div class="info__content">
-                    <p id="age"></p>
-                    <p>Gomel, Belarus</p>
-                    <p>
-                        <a href="mailto:apankov4696@gmail.com">apankov4696@gmail.com</a>
-                    </p>
-                    <p>
-                        <a href="tel:+375293890927">+375 29 389-09-27</a>
-                    </p>
-                    <p><a href="https://gsu.by/">GSU</a> (2016), <a href="https://gomel.itstep.by/">ItStep</a>
-                        (2022)</p>
+                    <div class="flex">
+                        <h4>AGE</h4> <span id="age" class="info__content"></span> 
+                    </div>
+                    <div class="flex">
+                        <h4>LOCATION</h4> <span class="info__content">Gomel, Belarus</span> 
+                    </div>
+                    <div class="flex">
+                        <h4>E-MAIL</h4> <span class="info__content"><a href="mailto:apankov4696@gmail.com">apankov4696@gmail.com</a></span> 
+                    </div>
+                    <div class="flex">
+                        <h4>PHONE</h4> <span class="info__content"><a href="tel:+375293890927">+375 29 389-09-27</a></span> 
+                    </div>
+                    <div class="flex">
+                        <h4>EDUCATION</h4> <span class="info__content"><a href="https://gsu.by/">GSU</a> (2016), <a href="https://gomel.itstep.by/">ItStep</a>
+                            (2022)</span> 
+                    </div>
+                    
                 </div>
             </div>
             <div class="social-networks">
