--- a/index.html
+++ b/index.html
@@ -19,24 +19,23 @@
         <aside>
             <img src="./img/photo.jpg" alt="photo">
             <div class="info">
-                <div class="info__headings">
-                    <div class="flex">
-                        <h4>AGE</h4> <span id="age" class="info__content"></span> 
-                    </div>
-                    <div class="flex">
-                        <h4>LOCATION</h4> <span class="info__content">Gomel, Belarus</span> 
-                    </div>
-                    <div class="flex">
-                        <h4>E-MAIL</h4> <span class="info__content"><a href="mailto:apankov4696@gmail.com">apankov4696@gmail.com</a></span> 
-                    </div>
-                    <div class="flex">
-                        <h4>PHONE</h4> <span class="info__content"><a href="tel:+375293890927">+375 29 389-09-27</a></span> 
-                    </div>
-                    <div class="flex">
-                        <h4>EDUCATION</h4> <span class="info__content"><a href="https://gsu.by/">GSU</a> (2016), <a href="https://gomel.itstep.by/">ItStep</a>
-                            (2022)</span> 
-                    </div>
-                    
+
+                <div class="info-item">
+                    <h4>AGE</h4> <span id="age"></span>
+                </div>
+                <div class="info-item">
+                    <h4>LOCATION</h4> <span>Gomel, Belarus</span>
+                </div>
+                <div class="info-item">
+                    <h4>E-MAIL</h4> <span><a href="mailto:apankov4696@gmail.com">apankov4696@gmail.com</a></span>
+                </div>
+                <div class="info-item">
+                    <h4>PHONE</h4> <span><a href="tel:+375293890927">+375 29 389-09-27</a></span>
+                </div>
+                <div class="info-item">
+                    <h4>EDUCATION</h4> <span><a href="https://gsu.by/">GSU</a> (2016), <a
+                            href="https://gomel.itstep.by/">ItStep</a>
+                        (2022)</span>
                 </div>
             </div>
             <div class="social-networks">
